--- a/Calcurltu/assest/css/style.css
+++ b/Calcurltu/assest/css/style.css
@@ -82,13 +82,28 @@ header.fixed {
  img.vertor {
      margin-left: 5px;
  }
+ .accordion-body ul {
+    list-style: none;
+    padding: 0;
+}
+.accordion-body ul li {
+    border-bottom: 1px solid #f1f1f1;
+    width: 283px;
+}
+.accordion-body ul li a {
+    font-size: 13.5px;
+    color: #212529;
+    text-decoration: none;
+    width: 100%;
+    padding: 0 6.1px;
+    line-height: 45px;
+}
  /*end nabMobile*/
 .banner,.banner-image {
      height: 418px;
      background: url(../images/Rectangle1690.png);
      background-repeat: no-repeat;
-     background-size: cover ;
-     
+     background-size: cover ; 
  }
 .introduce h1 {
     font-family: 'Poppins', sans-serif;
@@ -128,8 +143,6 @@ header.fixed {
 }
 .persion {
     position: relative;
-    width: 1492px;
-    margin: auto;
     margin-top: 4.5rem;
  }
   .persion-image_people1, .persion-image_people3, .persion-image_people5, .persion-image_people7 img {
@@ -154,10 +167,7 @@ header.fixed {
     color: #25282B;
     text-align: center;
  }
- .healthy {
-    width: 100%;
- }
- .healthy-image img {
+ .healthy, .healthy-image img, .join-now {
     width: 100%;
  }
  .customary-festival {
@@ -176,10 +186,10 @@ header.fixed {
     font-weight: 400;
     font-size: 14px;
     line-height: 25px;
-    letter-spacing: 0.6px;
     text-align: justify;
+    margin-top: 20px;
  }
- .btn-healthy {
+ .btn-healthy, .btn-festival {
      display: flex;
      align-items: flex-start;
      flex-wrap: wrap;
@@ -196,8 +206,7 @@ header.fixed {
     line-height: 20px;
 }
 
- .btn-2 p, .btn-3 p,
- .btn-festival2 p, .btn-festival3 p  {
+ .btn-2 p, .btn-3 p,.btn-festival2 p, .btn-festival3 p  {
     background-color: #fff;
     color: #000000;
     width: 120px;
@@ -210,11 +219,10 @@ header.fixed {
     box-shadow: 0px 2px 21px 3px rgba(0, 0, 0, 0.04);
     margin: 0px 10px;
 }
-.btn-4 p {
+.btn-4 p, .btn-festival4 p {
     background-color: #fff;
     width: 153px;
     height: 36px;
-    background: #FFFFFF;
     box-shadow: 0px 2px 21px 3px rgb(0 0 0 / 4%);
     border-radius: 63px;
     font-family: 'Poppins', sans-serif;
@@ -222,6 +230,7 @@ header.fixed {
     line-height: 19px;
     padding: 7px 14px;
     color: #000000;
+    margin-top: 15px;
 }
 p.festival-text1, p.festival-text2  {
     font-family: 'Poppins', sans-serif;
@@ -229,16 +238,9 @@ p.festival-text1, p.festival-text2  {
     font-weight: 400;
     font-size: 14px;
     line-height: 25px;
-    letter-spacing: 0.8px;
     text-align: justify;
     margin-top: 20px;
 }
-.btn-festival {
-    display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
-}
-
 .btn-festival1 p {
     background-color: #0BBEE7;
     width: 156px;
@@ -250,41 +252,12 @@ p.festival-text1, p.festival-text2  {
     font-weight: 400;
     line-height: 20px;
 }
-/* .btn-festival2 p, .btn-festival3 p  {
-    background-color: #fff;
-    width: 139px;
-    color: #000000;;
-    border-radius: 63px;
-    padding: 6px 14px;
-    font-family: 'Poppins', sans-serif;
-    font-size: 13px;
-    font-weight: 400;
-    line-height: 20px;
-    box-shadow: 0px 2px 21px 3px rgba(0, 0, 0, 0.04);
-    margin: 0px 10px;
-} */
-
-.btn-festival4 p {
-background-color: #fff;
-width: 200px;
-height: 36px;
-background: #FFFFFF;
-box-shadow: 0px 2px 21px 3px rgba(0, 0, 0, 0.04);
-border-radius: 63px;
-font-family: 'Poppins', sans-serif;
-font-size: 13px;
-line-height: 19px;
-padding: 7px 14px;
-color: #000000;
-}
-
 .multi-class-hero {
     width: 100%;
     height: 330px;
     background: #FFFFFF;
     box-shadow: 0px 2px 21px 3px rgba(0, 0, 0, 0.04);
 }
-
 .multi-hero_image {
     display: flex;
     justify-content: center;
@@ -339,9 +312,6 @@ p.awards {
     width: 100%;
     height: 221px;
 }
-.join-now {
-width: 100%;
-}
 .join-now h4 {
   color: #fff;
   width: 290px;
@@ -356,11 +326,12 @@ width: 100%;
     color: #fff;  
     margin: 10px 50px
 }
-
 /*footer*/
-
- a {
+a {
     text-decoration: none;
+}
+ul {
+    padding-left: 0;
 }
 .bottom-footer {
     font-family: 'Poppins', sans-serif;
@@ -369,68 +340,32 @@ width: 100%;
     line-height: 16px;
     color: #000000;
 }
-.logo-footer a img {
-    width: 89px;
-    height: 46px;
-}
-
-.logo-footer p {
+.logo-footer p, .community-item{
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 13px;
     line-height: 19px;
-    letter-spacing: -0.02em;
     padding-top: 30px;
+    color: #000000;
 }
-.community {
+.community,.connection  {
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 13px;
     line-height: 19px;
-    letter-spacing: -0.02em;
     color: #25282B;
-
-}
-.community-item {
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 13px;
-    line-height: 20px;
-    letter-spacing: -0.02em;
-    color: #000000;
 }
 .community-item img {
     margin-right: 10px;
 }
 .community-footer ul li {
-    display: block;
+     list-style: none;
     padding-bottom: 10px;
 }
-.community-footer ul{
-    float: left;
-}
-.community-image-item {
-    position: absolute;
-    left: 20.83%;
-    right: 21.88%;
-    top: 4.17%;
-    bottom: 4.17%;
-    background: #FFFFFF;
-}
-.connection {
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 13px;
-    line-height: 19px;
-    letter-spacing: -0.02em;
-    color: #25282B;
-}
 .connection-footer-icon {
-    padding-top: 10px;
+    padding-top: 10px; 
 }
 .connection-img{
     background: #0BBEE7;
@@ -441,15 +376,14 @@ width: 100%;
     text-align: center;
     border-radius: 50% ;
 }
-/*end-footer*/
 .navbar-mobile {
     display: none;
 }
 
 /*QUERY MEDIA*/ 
-@media (max-width: 1500px) {
+@media (max-width: 1350px) {
       .persion-image {
-       display: none; 
+       display: none;
     }
 }
 @media (max-width: 1200px) {
@@ -465,29 +399,30 @@ width: 100%;
     .navbar-mobile{
         display: block;
     }  
-    .healthy-image {
+    .healthy-image, .festival-image {
         height: 100%;
+        
     }   
-    /* .festival-image {
-     height: 100%;
-    } */
     .destop-image  {
-        width: 100;
+        width: 100%;
         margin-top: 15px;
     }
     .healthy-gold {
         margin-top: 30px;
     }
     .customary-festival {
-        margin-top: 0;
+        margin-top: 20px;
     }
+    .healthys {
+        flex-direction: column-reverse;
+     }
 }
 @media (min-width: 740px) and (max-width: 1023px) {
     .right  ul li {
         display: none;
       }
       .healthy-gold {
-        margin-top: 10px;
+        margin-top: 25px;
     }
     .work-office_image h2 {
       font-size: 25px;
@@ -496,7 +431,7 @@ width: 100%;
         margin-top: 15px;
     }
     .customary-festival {
-        margin-top: 0;
+        margin-top: 20px;
     }
 }
  @media (max-width: 739px) {
@@ -508,15 +443,14 @@ width: 100%;
      margin-top: 15px;
  }
  .healthy-gold {
-    margin-top: 20px;
+    margin-top: 25px;
 }
-.customary-festival {
-    margin-top: 0;
-}
+
 }
 @media (max-width: 320px)  {
     .join-now h4 {
         font-size: 17px;
         word-wrap: break-word;
     }
+
 }
