--- a/new&blog/assets/css/new&blog.css
+++ b/new&blog/assets/css/new&blog.css
@@ -96,20 +96,7 @@ height: 40px;
 
 
 
-/*Media query*/
-@media (max-width: 1200px) {
-   .nav-menu_right ul {
-       display: none;
-   }
 
-   .navbar-mobile {
-       display: block;
-   }
-}
-.carousel-inner img{
-    height: 430px;
-    
-}
 .text-date{
 font-family: "SVN-Poppins";
 font-style: normal;
@@ -134,7 +121,7 @@ letter-spacing: -0.02em;
 color: #FFFFFF;
 }
 .main-mid{
-    height: 32px;
+    
     margin-top: 74px;
     
 }
@@ -176,27 +163,33 @@ padding-left: 20px;
     width: 346px;
     margin-top: 18px;
   }
-  .bottom-footer {
-
-
+  /* <--footer--> */
+#footer{
+   margin-top: 30px;
    
+ }
+ /*footer*/
+ .bottom-footer {
+ 
+ 
+    
    font-style: normal;
    font-weight: normal;
    font-size: 11px;
    line-height: 16px;
    /* identical to box height */
-
+ 
    letter-spacing: -0.02em;
-
+ 
    color: #000000;
-}
-
-.logo-footer a img {
+ }
+ 
+ .logo-footer a img {
    width: 89px;
    height: 46px;
-}
-
-.logo-footer p {
+ }
+ 
+ .logo-footer p {
  
    font-style: normal;
    font-weight: normal;
@@ -204,9 +197,9 @@ padding-left: 20px;
    line-height: 19px;
    letter-spacing: -0.02em;
    padding-top: 30px;
-}
-
-.community {
+ }
+ 
+ .community {
   
    font-style: normal;
    font-weight: 600;
@@ -214,43 +207,45 @@ padding-left: 20px;
    line-height: 19px;
    letter-spacing: -0.02em;
    color: #25282B;
-
-}
-
-.community-item {
-
+   text-decoration: none;
+ 
+ }
+ 
+ .community-item {
+ 
    font-style: normal;
    font-weight: normal;
    font-size: 13px;
    line-height: 20px;
+   text-decoration: none;
    /* or 154% */
-
+ 
    letter-spacing: -0.02em;
-
+ 
    color: #000000;
-}
-
-.community-item img {
+ }
+ 
+ .community-item img {
    margin-right: 10px;
-}
-
-.community-footer ul li {
+ }
+ 
+ .community-footer ul li {
    display: block;
    padding-bottom: 10px;
-}
-
-
-.community-image-item {
+ }
+ 
+ 
+ .community-image-item {
    position: absolute;
    left: 20.83%;
    right: 21.88%;
    top: 4.17%;
    bottom: 4.17%;
-
+ 
    background: #FFFFFF;
-}
-
-.connection {
+ }
+ 
+ .connection {
    
    font-style: normal;
    font-weight: 600;
@@ -258,12 +253,13 @@ padding-left: 20px;
    line-height: 19px;
    letter-spacing: -0.02em;
    color: #25282B;
-}
-.connection-footer-icon {
+   text-decoration: none;
+ }
+ .connection-footer-icon {
    padding-top: 10px;
-}
-
-.connection-img{
+ }
+ 
+ .connection-img{
    background: #0BBEE7;
    float: left;
    margin-left: 5px;
@@ -272,9 +268,26 @@ padding-left: 20px;
    text-align: center;
    border-radius: 50% ;
    
-}
-  @media (max-width: 1020px){
-  .main-3{
-    display: flex;
+ }
+ /*end footer */
+ 
+   /*Media query*/
+   @media (max-width: 1200px) {
+      .nav-menu_right ul {
+          display: none;
+      }
+   
+      .navbar-mobile {
+          display: block;
+      }
   }
+  
+  @media only screen and (max-width: 1020px) {
+    .main-3{
+      display: flex;
+      flex-direction: column;
+    }
+  }
+  @media only screen and (max-width: 768px) {
+    
   }
