--- a/Calcurltu/assest/css/style.css
+++ b/Calcurltu/assest/css/style.css
@@ -125,15 +125,19 @@ header.fixed {
     margin: 2.5rem;
     color: #25282B;
 }
+.title-text {
+    text-align: center;
+}
 .title-text p {
+    max-width: 820px;
+    height: 60px;
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 13px;
-    line-height: 19.5px;
+    line-height: 20px;
     letter-spacing: 1px;
-    text-align: center;
-
+    display: inline-block;
 }
  .persion-image {
     display: flex;
@@ -180,19 +184,48 @@ header.fixed {
    font-size: 26px;
    line-height: 39px;
  }
- p.healthy-text1,p.healthy-text2 {
+ .Healthy button {
     font-family: 'Poppins', sans-serif;
-    width: 100%;
+    padding: 8px 16px;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 25px;
-    text-align: justify;
-    margin-top: 20px;
+    width: 160px;
+    height: 50px;
+    border-radius: 36px;
+    border: none;
+    font-size: 13px;
+    line-height: 19.5px;
+    margin-bottom: 10px;
+    margin: 5px 5px;
  }
- .btn-healthy, .btn-festival {
-     display: flex;
-     align-items: flex-start;
-     flex-wrap: wrap;
+ .btn-festival button {
+     font-family: 'Poppins', sans-serif;
+     padding: 8px 16px;
+     font-weight: 400;
+     width: 160px;
+     height: 50px;
+     border-radius: 36px;
+     border: none;
+     font-size: 13px;
+     line-height: 19.5px;
+     margin-bottom: 10px;
+     margin: 5px 5px;
+ }
+
+ .btn-festival button:hover {
+    background-color: #0BBEE7;
+    color: #fff;
+
+ }
+  .btn-festival button:nth-child(1){
+    background-color: #0BBEE7;
+    width: 160px;
+    border-radius: 63px;
+    padding: 7px 12px;
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 20px;
  }
 .btn-1 p, .btn-festival1 p {
     background-color: #0BBEE7;
@@ -204,8 +237,8 @@ header.fixed {
     font-size: 13px;
     font-weight: 400;
     line-height: 20px;
-}
 
+}
  .btn-2 p, .btn-3 p,.btn-festival2 p, .btn-festival3 p  {
     background-color: #fff;
     color: #000000;
@@ -232,7 +265,7 @@ header.fixed {
     color: #000000;
     margin-top: 15px;
 }
-p.festival-text1, p.festival-text2  {
+p.healthy-text1, p.healthy-text2, p.festival-text1, p.festival-text2  {
     font-family: 'Poppins', sans-serif;
     width: 100%;
     font-weight: 400;
@@ -434,9 +467,8 @@ ul {
         margin-top: 20px;
     }
 }
- @media (max-width: 739px) {
+ @media (max-width: 759px) {
    .destop-image  {
-    width: 100;
     margin-top: 15px;
  }
  .office-image {
@@ -445,12 +477,10 @@ ul {
  .healthy-gold {
     margin-top: 25px;
 }
-
 }
 @media (max-width: 320px)  {
     .join-now h4 {
         font-size: 17px;
         word-wrap: break-word;
     }
-
 }
