--- a/Detail/assest/css/customer.css
+++ b/Detail/assest/css/customer.css
@@ -171,6 +171,7 @@ text-align: center;
 .Candidate a {
     color: #fff;
     padding: 5px;
+    font-weight: 600;
     text-decoration: none;
     display: block;
 }
@@ -236,6 +237,12 @@ margin-top: 22%;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     font-size: 16px;
+}
+.location-join {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 15px;
 }
 .location-join a {
     color: #000;
