--- a/detailnew&blog/assets/css/detailnew&blog.css
+++ b/detailnew&blog/assets/css/detailnew&blog.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,100&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
 a {
   text-decoration: none;
 }
@@ -102,7 +102,22 @@ height: 40px;
 .navbar-mobile {
    display: none;
 }
-
+.accordion-body ul {
+  list-style: none;
+  padding: 0;
+}
+.accordion-body ul li {
+  border-bottom: 1px solid #f1f1f1;
+  width: 283px;
+}
+.accordion-body ul li a {
+  font-size: 13.5px;
+  color: #212529;
+  text-decoration: none;
+  width: 100%;
+  padding: 0 6.1px;
+  line-height: 45px;
+}
 /*end header*/
 
 
@@ -177,7 +192,7 @@ height: 40px;
   font-weight: 600;
 }
 .main-content p{
-  font-family: 'SVN-Poppins'; 
+  font-family: 'Poppins', sans-serif; 
   font-weight: 400;
   font-style: normal;
   font-size: 13px;
@@ -207,7 +222,7 @@ height: 40px;
   
 }
 .p1{
-  font-family: 'Poppins'; 
+  font-family: 'Poppins', sans-serif;
   font-weight: 400;
   font-style: Regular;
   font-size: 13px;
@@ -227,9 +242,6 @@ height: 40px;
 }
 /*footer*/
 .bottom-footer {
-
-
-   
   font-style: normal;
   font-weight: normal;
   font-size: 11px;
