--- a/new&blog/assets/css/new&blog.css
+++ b/new&blog/assets/css/new&blog.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -21,7 +22,24 @@ header {
 .offcanvas-end {
    width: 320px;
 }
-
+.accordion-body ul {
+  list-style: none;
+  padding: 0;
+}
+.accordion-body ul li {
+  border-bottom: 1px solid #f1f1f1;
+  width: 283px;
+}
+.accordion-body ul li a {
+  font-family: 'Poppins', sans-serif;
+  font-size: 13.5px;
+  color: #212529;
+  text-decoration: none;
+  width: 100%;
+  padding: 0 6.1px;
+  line-height: 45px;
+}
+/*end nabMobile*/
 
 .image img {
 width: 77px;
@@ -38,7 +56,7 @@ height: 40px;
    padding: 10px 14px;
 }
 .nav-menu_right a {
-   font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
     font-weight:  500;
     font-size: 12px;
     line-height: 18px;
@@ -91,14 +109,8 @@ height: 40px;
 /*end header*/
 
 
-
-
-
-
-
-
 .text-date{
-font-family: "SVN-Poppins";
+  font-family: 'Poppins', sans-serif;
 font-style: normal;
 font-weight: normal;
 font-size: 13px;
@@ -107,7 +119,7 @@ letter-spacing: -0.02em;
 color: #A0A4A8;
 }
 .text-content{
-font-family: "SVN-Poppins";
+  font-family: 'Poppins', sans-serif;
 font-style: normal;
 font-weight: 600;
 font-size: 32px;
@@ -135,10 +147,8 @@ line-height: 135.4%;
 padding-left: 20px;
 }
 .main-3 {
-    
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    
+    grid-template-columns: 1fr 1fr 1fr;  
   }
   .main-item-img{
     text-align: center;
@@ -147,11 +157,9 @@ padding-left: 20px;
     display: flex;
     margin-left:135px;
     padding-top: 40px;
-    
-    
   }
   .p1{
-    font-family: 'Poppins'; 
+    font-family: 'Poppins', sans-serif;
     font-weight: 400;
     font-style: Regular;
     font-size: 13px;
@@ -170,17 +178,11 @@ padding-left: 20px;
  }
  /*footer*/
  .bottom-footer {
- 
- 
-    
    font-style: normal;
    font-weight: normal;
    font-size: 11px;
    line-height: 16px;
-   /* identical to box height */
- 
    letter-spacing: -0.02em;
- 
    color: #000000;
  }
  
@@ -188,9 +190,7 @@ padding-left: 20px;
    width: 89px;
    height: 46px;
  }
- 
  .logo-footer p {
- 
    font-style: normal;
    font-weight: normal;
    font-size: 13px;
@@ -198,9 +198,7 @@ padding-left: 20px;
    letter-spacing: -0.02em;
    padding-top: 30px;
  }
- 
  .community {
-  
    font-style: normal;
    font-weight: 600;
    font-size: 13px;
@@ -219,16 +217,13 @@ padding-left: 20px;
    line-height: 20px;
    text-decoration: none;
    /* or 154% */
- 
    letter-spacing: -0.02em;
- 
    color: #000000;
  }
  
  .community-item img {
    margin-right: 10px;
  }
- 
  .community-footer ul li {
    display: block;
    padding-bottom: 10px;
