--- a/pageForm/index.css
+++ b/pageForm/index.css
@@ -1,23 +1,110 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap');
 * {
-  font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
 }
-i {
-  margin-right: 10px;
-  color: #0bbee7;
-}
-a {
-  text-decoration: none;
-}
-.nav-link {
-  color: black;
-  font-size: 14px;
-  font-weight: 500;
-}
-.nav-link:hover {
-  color: black;
-}
+header {
+  padding: 20px;
+  width: 100%;
+  background-color: #fff;
+ 
+ }
+ .offcanvas-body {
+   padding: 0;
+   margin-top: 34px;
+ }
+ /*nabMobile*/
+ .offcanvas-end {
+   width: 320px;
+ }
+ .accordion-body ul {
+   list-style: none;
+   padding: 0;
+ }
+ .accordion-body ul li {
+   border-bottom: 1px solid #f1f1f1;
+   width: 283px;
+ }
+ .accordion-body ul li a {
+   font-size: 13.5px;
+   color: #212529;
+   text-decoration: none;
+   width: 100%;
+   padding: 0 6.1px;
+   line-height: 45px;
+ }
+ /*end nabMobile*/
+ 
+ 
+ .image img {
+ width: 77px;
+ height: 40px;
+ }
+ .nav-menu_right > ul > li, .nav-menu a {
+   display: inline-block;
+ }
+ .nav-menu_right ul {
+   margin-bottom: 0;
+   float: right ;
+ }
+ .nav-menu_right ul li{
+   padding: 10px 14px;
+ }
+ .nav-menu_right a {
+   font-family: 'Poppins', sans-serif;
+    font-weight:  500;
+    font-size: 12px;
+    line-height: 18px;
+    color: #25282B;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 0.5px; 
+ }  
+ .nav-menu_right li a:hover {
+   border-bottom: 3px solid #00DAFF;
+  margin-bottom: 0;
+ 
+ } 
+ .nav-menu_right li:hover .submenu {
+   display: block;
+   padding: 0;
+   margin: 0;
+ }
+ .submenu {
+   position: absolute;
+   background-color: #a8a8a8;
+  list-style: none;
+  padding: 0;
+  display: none;
+  width: 14%;
+  margin: 2px 5px;
+ }
+ .submenu a:hover {
+ color: #f2f2f2 !important;
+ border-bottom: none !important;
+ }    
+ .accordion-buttons {
+   text-decoration: none;
+   font-size: 1rem;
+   font-weight: 400;
+   color: #212529;
+   padding: 0px 20px;
+   margin-top: 10px;
+ }
+ .accordion-header {
+ padding: 7px;
+ }
+ .accordion-button {
+   padding: 0.4rem 1.25rem;
+ }
+ .navbar-mobile {
+   display: none;
+ }
+ 
+ /*end header*/
+ 
+ 
 
+/*end-nav*/
 .img-navbar {
   margin-right: 8rem;
 }
@@ -84,6 +171,29 @@ h1 {
 .font-footer {
   font-size: 13px;
 }
+
+@media (max-width: 1200px) {
+  .nav-menu_right ul {
+      display: none;
+  }
+
+  .navbar-mobile {
+      display: block;
+  }
+  .bootom-boder {
+    flex-direction: column;
+  }
+  .button-white, .button-primary {
+    margin-left: 0;
+    margin-top: 15px;
+  }
+  .input-child {
+    flex-direction: column;
+  }
+  .form-mail-pass {
+   width: 100%;
+ }
+} 
 @media screen and (max-width: 414px and 600px) {
   * {
     font-size: 14px;
